--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>{ 90% } Das Pessoas Não Conhecem a Real Fórmula de Desenvolvimento Muscular, Que esta Ajudando Milhares de Pessoas a Ganhar de 13 a 15 KG de Massa Muscular !</b></h3>
+            <h3 class="my-4"><b>{ 90% } Das Pessoas Não Conhecem a Real Fórmula de Desenvolvimento, Que está Ajudando Milhares de Pessoas a Ganhar de 13 a 15 KG de Massa Muscular !</b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_6246e38334cf0a000a83a20a">var s=document.createElement("script");s.src="https://cdn.converteai.net/cbba23bc-c6b3-4661-80d2-c6052d242f99/players/6246e38334cf0a000a83a20a/player.js",s.async=!0,document.head.appendChild(s);</script>
