--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/eQa0sO6" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">QUERO COMPRAR A FÓRMULA AGORA</span>
-                <span class="span-btn2">(Atenção: Aproveite Já o Período Disponível da Fórmula)</span>
+                <span class="span-btn">QUERO ACESSAR A FÓRMULA AGORA</span>
+                <span class="span-btn2">(Atenção: Aproveite Já o Período Disponível)</span>
               </a>
             </div>
 
