--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@ src="https://www.facebook.com/tr?id=663213304792325&ev=PageView&noscript=1"
             <h3 class="my-4"><b>90% Das Pessoas Não Conhecem a Real Fórmula de Desenvolvimento, Que está Ajudando Milhares de Pessoas a Ganhar de 13 a 15KG de Massa Muscular!</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6246e38334cf0a000a83a20a">var s=document.createElement("script");s.src="https://cdn.converteai.net/cbba23bc-c6b3-4661-80d2-c6052d242f99/players/6246e38334cf0a000a83a20a/player.js",s.async=!0,document.head.appendChild(s);</script>
-
+            <script type="text/javascript" id="scr_62887d6c98b8fd000a7177b2">var s=document.createElement("script");s.src="https://scripts.converteai.net/cbba23bc-c6b3-4661-80d2-c6052d242f99/players/62887d6c98b8fd000a7177b2/player.js",s.async=!0,document.head.appendChild(s);</script>
+            
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.kiwify.com.br/eQa0sO6" class="a-btn" style="text-decoration: none;">
