--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <!-- Headline -->
             <h3 class="my-4"><b>90% Das Pessoas Não Conhecem a Real Fórmula de Desenvolvimento, Que está Ajudando Milhares de Pessoas a Ganhar de 13 a 15KG de Massa Muscular!</b></h3>
 
-            <!-- VSL -->
-            <script type="text/javascript" id="scr_62887d6c98b8fd000a7177b2">var s=document.createElement("script");s.src="https://scripts.converteai.net/cbba23bc-c6b3-4661-80d2-c6052d242f99/players/62887d6c98b8fd000a7177b2/player.js",s.async=!0,document.head.appendChild(s);</script>
+            <! --  VSL -->
+              <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/-pJsp1MxnHs?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
